优化代码，优化编译器警告